--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/3rdsenin/basicCrud#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
