--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/3rdsenin/basicCrud#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
